# audiobook-magic

./: .gitignore  LICENSE.md  README.md  gui.py  main.py  pyproject.toml  requirements.txt  run.bat  run.command  search.py  test.py  ui.py  utils.py
.github/: FUNDING.yml
.github/workflows/: build.yml
Audiobook Downloader.app/Contents/: Info.plist
Audiobook Downloader.app/Contents/MacOS/: launcher
Audiobook Downloader.app/Contents/Resources/: AppIcon.icns  gui.py  main.py
Audiobook Downloader.app/Contents/Resources/scrapers/: audiozaic.py  generic.py  tokybook.py  zaudiobooks.py
scrapers/: __init__.py
