[project]
name = "audiobook-downloader"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4==4.13.4",
    "brotli==1.1.0",
    "bs4==0.0.2",
    "certifi==2025.7.14",
    "charset-normalizer==3.4.2",
    "idna==3.10",
    "lxml==6.0.0",
    "mutagen==1.47.0",
    "pycryptodomex==3.23.0",
    "requests==2.32.4",
    "rich==14.1.0",
    "soupsieve==2.7",
    "tqdm==4.67.1",
    "typing-extensions==4.14.1",
    "urllib3==2.5.0",
    "websockets==15.0.1",
    "yt-dlp==2025.8.22",
]
